--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,9 +1,16 @@
+.wrapper {
+  width: 100%;
+  margin: 0 auto;
+}
+
 .list {
   display: grid;
   grid-template-columns: repeat(auto-fill, 225px);
   gap: 48px;
-  margin: 48px 62px;
-  justify-content: space-between;
+  width: 91.47%;
+  margin: 48px auto;
+  justify-content: center;
+  align-items: center;
   padding: 0;
   list-style-type: none;
 }
